# AlprogRust

./: .env  Cargo.toml  app.rs  compute.rs  main.rs  model.rs  mongo.rs
