[package]
name = "dashboard_sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27", features = ["glow", "persistence"] }
egui = "0.27"
egui_plot = "0.27"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures = "0.3"
bson = "2.8"